Bug 301957 - Mail composer ignores identity field when opening saved message
Summary: Mail composer ignores identity field when opening saved message
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-15 09:38 UTC by Aldoo
Modified: 2012-06-15 19:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aldoo 2012-06-15 09:38:27 UTC
It seems kmail composer fails to retrieve the identity with which a saved draft was being edited with and instead fails back to default identity.

This behavior has an embarrassing consequence: you end up sending messages with the wrong identity without noticing it, then the wrong people start answering you on an email address they should not have known about.

Reproducible: Always

Steps to Reproduce:
1. Configure your kmail to have several identities.
2. start editing a message
3. change identity for this message to something else than default
4. close it and save it to drafts
5. go to your draft folder and re-open the message saved in 4
Actual Results:  
The identity field of the reopened message switched back to default identity.

Expected Results:  
The message, including all its metadata, should be identical to when it was saved.

This bug is not specific to saving to drafts: when you fail to send a message and it is saved to outbox, identity will also be lost when you reopen the message.
Comment 1 Laurent Montel 2012-06-15 16:46:40 UTC
Git commit b23cb3275f7a83e423f17206bed8199cfad7124a by Montel Laurent.
Committed on 15/06/2012 at 18:46.
Pushed by mlaurent into branch 'master'.

Fix Bug 301957 - Mail composer ignores identity field when opening saved

message
FIXED-IN: 4.8.5

M  +3    -1    messagecomposer/composerviewbase.cpp

http://commits.kde.org/kdepim/b23cb3275f7a83e423f17206bed8199cfad7124a
Comment 2 Laurent Montel 2012-06-15 16:47:32 UTC
Git commit 47df526a4db4c4c9a9aae7b0eaee27830eb4ae53 by Montel Laurent.
Committed on 15/06/2012 at 18:46.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 301957 - Mail composer ignores identity field when opening saved

message
FIXED-IN: 4.8.5
(cherry picked from commit b23cb3275f7a83e423f17206bed8199cfad7124a)

M  +3    -1    messagecomposer/composerviewbase.cpp

http://commits.kde.org/kdepim/47df526a4db4c4c9a9aae7b0eaee27830eb4ae53
Comment 3 Aldoo 2012-06-15 19:25:41 UTC
That was fast! Thank you :).