Fix Bug 301957 - Mail composer ignores identity field when opening saved

message
FIXED-IN: 4.8.5
BUG: 301957
(cherry picked from commit b23cb3275f7a83e423f17206bed8199cfad7124a)